# cbn_neuroscience

./: .gitignore  01_dinamica_poblacion.md  02_arquitectura_no_lineal.md  03_aprendizaje_y_estabilidad.md  README_TESIS.md  associative_learning_report.md  correlation_analysis_report.md  coupling_normalization.md  figure_blocks.tex  final_manuscript_section.tex  initial_weights_report.md  nonlinear_coupling_report.md  pyproject.toml  results_section.tex  sanity_check.py  srm_methodology.tex  step_response_report.md  technical_report.md
1_ejemplo/: 1_modelo.ipynb  1_test.ipynb  2_modelo.ipynb  3_modelo.ipynb  3_modelo_neuronal.ipynb  4_corticothalamic_loop.ipynb
examples/: activation_robustness_comparison.py  associative_learning_demo.py  attractor_correspondence.py  emergent_logic_analysis.py  gerstner_activation_analysis.py  laminar_network_demo.py  lateral_inhibition_demo.py  learning_rules_comparison.py  mean_field_validation.py  nmda_gate_demo.py  nonlinear_coupling_demo.py  plasticity_framework_demo.py  population_dynamics_analysis.py  population_rate_analysis.py  spike_vs_rate_model.py  srm_kernel_visualization.py  stdp_self_synchronization.py  step_response_analysis.py  stochastic_cv_analysis.py  synaptic_competition_demo.py  validation_triathlon.py
lascon-env/: pyvenv.cfg
learning/: 1_mapa_sensorial.ipynb  2_estrucutura_capas.ipynb  3_modulo_cortical_universal.ipynb
src/: brian_cbn.py
tests/: test_attractor.py  test_compartmental_column.py  test_coupling.py  test_factory.py  test_laminar.py  test_laminar_connectivity.py  test_network_simulator.py  (+2 more)
(+17 files in other folders)
