[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cbn_neuroscience"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A Python package for simulating neuroscience principles based on cbnetwork."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
